--- a/main/templates/account/signup.html
+++ b/main/templates/account/signup.html
@@ -7,6 +7,11 @@
 {% block content %}
 <h1>{% trans "Sign Up" %}</h1>
 
+<div class="socialaccount_ballot">
+  {% include "accountinclude/social_providers.html" %}
+  <div class="divider"></div>
+</div>
+
 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
