--- a/main/templates/layouts/_sidelayout.html
+++ b/main/templates/layouts/_sidelayout.html
@@ -28,7 +28,7 @@
               </a>
               <div class="collapsible-body">
                 <ul>
-                  {% if request.user.has_blog %}
+                  {% if request.user.user_blog %}
                     <li>
                       <a {% if page == "myblog" %}class="active"{% endif %} href="{% url 'blog-my-blog' %}">
                         <i class="material-icons left">settings</i> My Blog
