--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -692,6 +692,30 @@ $nav-width: 15%;
   }
 }
 
+.blog-form-map {
+  height: 300px;
+}
+.controls {
+  background-color: #fff!important;
+  border-radius: 2px!important;
+  border: 1px solid transparent!important;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3)!important;
+  box-sizing: border-box!important;
+  font-size: 15px!important;
+  font-weight: 300!important;
+  height: 32px!important;
+  margin-left: 17px!important;
+  margin-top: 10px!important;
+  outline: none!important;
+  padding: 0 11px 0 13px!important;
+  text-overflow: ellipsis!important;
+  width: 400px!important;
+}
+
+.controls:focus {
+  border-color: #4d90fe;
+}
+
 // ==== 8. MATERIALIZE CRISPY ===== //
 fieldset {
   min-width: 0;
