--- a/main/templates/main/start.html
+++ b/main/templates/main/start.html
@@ -90,7 +90,7 @@
                   <p>{{post.headline}}</p>
                 </div>
                 <div class="card-action">
-                  <a href="#">This is a link</a>
+                  <a href="{{ post.get_absolute_url }}">{{ post }}</a>
                 </div>
               </div>
             </div>
