--- a/blog/templates/bloginclude/post_preview.html
+++ b/blog/templates/bloginclude/post_preview.html
@@ -1,12 +1,16 @@
 <div class="article-container">
-  <h1>{{post.title}}</h1>
+  <div class="post-header">
+    <h1>{{ post.title|title }}</h1>
+  </div>
   <a href="{{post.get_absolute_url}}">
     <img src="{{post.image.url}}">
   </a>
-  <h5 class="accent-text">{{post.headline}}</h5>
-  <p class="preview">{{post.body|safe|truncatewords_html:30}}</p>
-  <a href="{{post.get_absolute_url}}" class="btn right hover-right">
-    Read More <i class="material-icons right">arrow_forward</i>
-  </a>
-  <br>
+  <div class="post-content">
+    <h5 class="accent-text">{{post.headline}}</h5>
+    <p class="preview">{{post.body|safe|truncatewords_html:30}}</p>
+    <a href="{{post.get_absolute_url}}" class="btn right hover-right">
+      Read More <i class="material-icons right">arrow_forward</i>
+    </a>
+    <br><br>
+  </div>
 </div>
