--- a/main/templates/account/signup.html
+++ b/main/templates/account/signup.html
@@ -1,26 +1,38 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
+{% load staticfiles %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up" %}</h1>
+  <h1 class="auth__header">
+    <img src="{% static 'img/logo_white.png' %}" class="left">
+      {% trans "Sign Up" %}
+    <img src="{% static 'img/logo_white.png' %}" class="right">
+  </h1>
 
-<div class="socialaccount_ballot">
-  {% include "accountinclude/social_providers.html" %}
-  <div class="divider"></div>
-</div>
+  <div class="socialaccount_ballot">
+    {% include "accountinclude/social_providers.html" %}
+    <div class="divider"></div>
+  </div>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+  <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} <i class="material-icons right">arrow_forward</i></button>
-</form>
+  <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+    {% csrf_token %}
+    {{ form.as_p }}
+    {% if redirect_field_value %}
+    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+    {% endif %}
+    <button type="submit">{% trans "Sign Up" %} <i class="material-icons right">arrow_forward</i></button>
+  </form>
+{% endblock %}
 
+{% block js %}
+<script type="text/javascript">
+  $(document).ready(function(){
+    $("body").css({"height": "inherit"});
+  });
+</script>
 {% endblock %}
