blog title font

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -35,7 +35,7 @@
       <img src="{% static 'img/landing.jpg' %}">
       <div class="overlay hide-on-small-only">
         <div class="inner">
-          <h1 class="title" data-sr="move 50px, enter top">Travel Blog Wave</h1>
+          <h1 class="title" data-sr="move 50px, enter bottom, scale up 50%, flip 180deg, over 1.5s">Travel Blog Wave</h1>
           <h5 data-sr="wait 0.5s, move 50px, enter top"><a class="btn" href="{% url 'blog-create' %}">
             Create your travel blog
           </a></h5>
