--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -276,8 +276,9 @@ $nav-width: 15%;
 
   .header {
     .title {
-       font-size: 5em;
-       font-family: soundbeat;
+       font-size: 4em;
+       font-weight: 200;
+      //  font-family: soundbeat;
      }
 
     .overlay {
