--- a/blog/templates/bloginclude/map.html
+++ b/blog/templates/bloginclude/map.html
@@ -1,11 +1,8 @@
 <script>
   function initMap(mapId, lat, lng) {
-    // This sample uses the Place Autocomplete widget to allow the user to search
-    // for and select a place. The sample then displays an info window containing
-    // the place ID and other information about the place that the user has
-    // selected.
-    var center;
+    /* Used to edit or create posts. */
 
+    var center;
     var markerPosition = function(){
       /* determine if we have a marker that we should place on init. This can
          come from js or from python.
