--- a/blog/templates/bloginclude/nav_items.html
+++ b/blog/templates/bloginclude/nav_items.html
@@ -19,7 +19,7 @@
     {% if request.user.user_blog %}
       <li>
         <a {% if page == "myblog" %}class="active"{% endif %} href="{% url 'blog-my-blog' %}">
-          <i class="material-icons left">settings</i> My Blog
+          <i class="material-icons left">description</i> My Blog
         </a>
       </li>
     {% else %}
