--- a/blog/templates/bloginclude/map.html
+++ b/blog/templates/bloginclude/map.html
@@ -39,6 +39,7 @@
     }
 
     var map = new google.maps.Map(document.getElementById(mapId), {
+      scrollwheel: false,
       center: center,
       zoom: 4
     });
