--- a/main/templates/account/login.html
+++ b/main/templates/account/login.html
@@ -27,7 +27,7 @@
     {% if redirect_field_value %}
       <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
     {% endif %}
-    <a class="left secondaryAction" href="{% url 'account_reset_password' %}">
+    <a class="btn left secondaryAction" href="{% url 'account_reset_password' %}">
       {% trans "Forgot Password?" %}
     </a>
     <input class="primaryAction" type="submit" value="{% trans 'Login' %}" />
