--- a/main/templates/main/profile_update.html
+++ b/main/templates/main/profile_update.html
@@ -2,8 +2,10 @@
 {% load crispy_forms_tags %}
 
 {% block sidelayout_content %}
-  <div class="profile-update">
-    {% crispy form %}
+  <div class="container">
+    <div class="profile-update">
+      {% crispy form %}
+    </div>
   </div>
 {% endblock %}
 
