--- a/blog/templates/blog/all_posts.html
+++ b/blog/templates/blog/all_posts.html
@@ -24,15 +24,13 @@
     <div class="row inner-content">
       <div class="all-posts container">
         {% for post in post_list %}
-          {% if forloop.first %}
+          {% if forloop.first or forloop.counter|divisibleby:2 %}
             <div class="row">
           {% endif %}
-          {% if forloop.counter|divisibleby:2 %}
-            <div class="col s12 m6">
-              {% include "bloginclude/post_preview.html" %}
-            </div>
-          {% endif %}
-          {% if forloop.last %}
+          <div class="col s12 m6">
+            {% include "bloginclude/post_preview.html" %}
+          </div>
+          {% if forloop.last or forloop.counter|divisibleby:2 %}
             </div>
           {% endif %}
         {% endfor %}
