--- a/main/templates/maininclude/base.html
+++ b/main/templates/maininclude/base.html
@@ -8,7 +8,7 @@
       <title>Travel Blog Wave</title>
 
       <link rel="stylesheet" href="{% static 'css/style.min.css' %}">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+      <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
       <link rel="shortcut icon" href="{% static 'img/logo.ico' %}">
     {% endblock %}
   </head>
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/materialize.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/scrollReveal.min.js' %}"></script>
-        
+
     <script>
       window.sr = new scrollReveal();
 
