--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -1,4 +1,5 @@
 {% extends "layouts/2col.html" %}
+{% load staticfiles %}
 
 {% block sidelayout_content %}
   <div class="blog-article">
@@ -20,7 +21,7 @@
             {% if author.image %}
               <img src="{{author.image.url}}" class="circle" alt="{{author.first_name}} {{author.last_name}}">
             {% else %}
-              <img src="http://placehold.it/400x400" class="circle">
+              <img src="{% static 'img/logo_dark.png' %}" class="circle">
             {% endif %}
           {% endwith %}
         </div>
