--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -15,6 +15,7 @@
   8. Materialize Crispy
   9. Forms
   10. Modals
+  11. Cards
 */
 
 
@@ -806,5 +807,19 @@ input[type="checkbox"] + label {
   }
   .modal-footer {
     background-color: $secondary-color;
+  }
+}
+
+// ===== 10. CARDS ===== //
+.card-light {
+  @extend .card;
+
+  img {
+    -webkit-filter: brightness(70%); /* Chrome, Safari, Opera */
+    filter: brightness(70%);
+  }
+
+  .card-title {
+    color: white;
   }
 }
