--- a/main/templates/main/start.html
+++ b/main/templates/main/start.html
@@ -87,7 +87,7 @@
         <div class="row">
           {% for post in post_list %}
             <div class="col s12 m6">
-              <div class="card medium">
+              <div class="card-light medium">
                 <div class="card-image">
                   <img src="{{post.image.url}}">
                   <span class="card-title">{{post.title}}</span>
