--- a/main/templates/maininclude/tinymce.html
+++ b/main/templates/maininclude/tinymce.html
@@ -1,7 +1,13 @@
 <script src="//tinymce.cachefly.net/4.2/tinymce.min.js"></script>
-<script>
+<script type="text/javascript">
   tinymce.init({
     selector:'textarea',
-    height : 400
+    height: 400,
+    plugins: [
+        "advlist autolink lists link image charmap print preview anchor",
+        "searchreplace visualblocks code fullscreen",
+        "insertdatetime media table contextmenu paste"
+    ],
+    menubar: 'edit insert format tools'
   });
 </script>
